--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@types/react": "^19.2.0",
         "@types/react-dom": "^19.2.0",
         "@vitejs/plugin-react": "^5.0.0",
+        "chart": "^0.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -57,6 +58,7 @@
         "react": "^19.2.0",
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.2.0",
+        "recharts": "^2.15.4",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
