--- a/render.yaml
+++ b/render.yaml
@@ -4,18 +4,16 @@ services:
     name: nf-academy-hris # Or your preferred app name
     env: php
     plan: free # Or your preferred paid plan
-    buildCommand:
-    # Install PHP and Node dependencies
-    composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
-    npm install
-
-    # Build the frontend assets
-    npm run build
-
-    # Run database migrations and link storage
-    # The --force flag is required in production
-    php artisan migrate --force
-    php artisan storage:link
+    buildCommand: |
+      # Install PHP and Node dependencies
+      composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
+      npm install
+      # Build the frontend assets
+      npm run build
+      # Run database migrations and link storage
+      # The --force flag is required in production
+      php artisan migrate --force
+      php artisan storage:link
     startCommand: php artisan serve --host 0.0.0.0 --port $PORT
     healthCheckPath: /up
     envVars:
