--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/wayfinder": "^0.1.9"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^5.0",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
